<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/amt1Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="33dp"
        android:text="@string/amt1Tv" />

    <TextView
        android:id="@+id/amt2Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/amt1Tv"
        android:layout_marginTop="94dp"
        android:text="@string/amt2Tv" />

    <EditText
        android:id="@+id/amt2EditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/amt2Tv"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/amt2hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/amt1EditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amt2EditTxt"
        android:layout_alignTop="@+id/amt1Tv"
        android:ems="10"
        android:hint="@string/amt1hint"
        android:inputType="phone" />

    <Button
        android:id="@+id/entryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:text="@string/entryButton" />

</RelativeLayout>