<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/authTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="58dp"
        android:gravity="center_horizontal" />

    <Spinner
        android:id="@+id/patientSpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/authTv"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="69dp" />
    
    <Button
        android:id="@+id/delButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/dbDel" />

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_alignTop="@+id/patientSpin"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/sendPatientMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendMessageButton" />

        <Button
            android:id="@+id/newButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/sendPatientMessage"
            android:text="@string/newUserButton" />

        <Button
            android:id="@+id/writeButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/dbWrite" />
    </RelativeLayout>

</RelativeLayout>