<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

<!--     <TextView
        android:id="@+id/subtitleTv"
        style="@style/styleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTv"
        android:gravity="center"
        android:text="@string/instr" /> -->

    <Button
        android:id="@+id/readButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:text="@string/readButton" />

    <Button
        android:id="@+id/writeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/readButton"
        android:layout_below="@+id/readButton"
        android:layout_marginTop="52dp"
        android:gravity="center_horizontal"
        android:text="@string/writeButton" />

</RelativeLayout>